# claude-cortex

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  install.sh  main.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: bug-investigator.md  code-implementer.md  continuous-runner.md  doc-writer.md  knowledge-retriever.md  learning-extractor.md  outcome-tracker.md  refactorer.md  research-agent.md  session-continuity.md  task-orchestrator.md  test-writer.md
docs/: ROADMAP-v2-COMPLETE.md
hooks/: post_tool_use.py  pre_compact.py  session_end.py  session_start.py  shared.py  stop.py  subagent_stop.py
hooks/shared/: __init__.py  analysis.py  constants.py  extraction.py  git.py  handoff.py  json_utils.py  ledger.py  locking.py  paths.py  project.py  session.py  settings.py  transcript.py  unified.py
scripts/: cclaude.sh
skills/continuous-execution/: SKILL.md
skills/handoff-management/: SKILL.md
skills/learning-capture/: SKILL.md
skills/ledger-knowledge/: SKILL.md
skills/outcome-prompt/: SKILL.md
skills/search-learnings/: SKILL.md
skills/task-orchestrator/: SKILL.md
src/claude_cortex/: cli.py  mcp_server.py
src/claude_cortex/analysis/: metrics.py  transcript.py
src/claude_cortex/entities/: __init__.py  graph.py  models.py  schema.py
src/claude_cortex/extractors/: __init__.py  base.py  regex.py
src/claude_cortex/handoff/: __init__.py  manager.py
src/claude_cortex/ingest/: __init__.py  git_extractor.py  github_client.py  patterns.py  pr_extractor.py  state.py
src/claude_cortex/ledger/: __init__.py  chain.py  crypto.py  models.py  objects.py
src/claude_cortex/runner/: __init__.py  context.py
src/claude_cortex/search/: __init__.py  index.py
src/continuous_claude/: __init__.py  cli.py  sync.py
tests/: conftest.py  test_cli.py  test_crypto.py  test_entities.py  test_handoff_manager.py  test_ingest.py  test_ledger.py  test_merkle.py  test_objects.py  test_recommender.py  test_runner.py  test_search.py  test_semantic.py  test_shared.py  test_summary_manager.py  test_sync.py
tui/: README.md  package.json  tsconfig.json
tui/src/: api.ts  index.tsx
(+31 files in other folders)
