[project]
name = "continuous-claude-custom"
version = "0.1.0"
description = "Continuous Claude with blockchain-style ledger memory and performance-based reinforcement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
]

[project.scripts]
cclaude = "continuous_claude.cli:main"

[project.optional-dependencies]
# Semantic search - vector similarity for finding related learnings
semantic = [
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
]
# All optional features
all = [
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/continuous_claude"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
