[project]
name = "claude-cortex"
version = "0.1.0"
description = "Continuous Claude with blockchain-style ledger memory and performance-based reinforcement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    # Semantic search - FastEmbed uses ONNX (187MB) vs PyTorch (6.9GB)
    "fastembed>=0.4.0",
    "sqlite-vec>=0.1.0",
    "cryptography>=46.0.3",
]

[project.scripts]
cclaude = "claude_cortex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_cortex"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
